# LoopRuntimeProfiler

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindPythonModule.cmake  HandleLLVMDependency.cmake  Util.cmake
doc/: CMakeLists.txt
include/: Config.hpp.in  Instrumenter.hpp  LoopRuntimeCallGraphProfiler.hpp  LoopRuntimeModuleProfiler.hpp  LoopRuntimeProfiler.hpp  LoopRuntimeProfilerPass.hpp  Utils.hpp
lib/: LoopRuntimeCallGraphProfiler.cpp  LoopRuntimeProfiler.cpp  LoopRuntimeProfilerPass.cpp
runtime/: CMakeLists.txt  lrp_rt.c  lrp_rt.cpp
runtimes/: CMakeLists.txt
runtimes/degenerate/: CMakeLists.txt  lrp_degenerate_rt.cpp
runtimes/depth/: CMakeLists.txt  lrp_depth_rt.cpp
runtimes/dummy/: CMakeLists.txt  lrp_dummy_rt.cpp
runtimes/executed/: CMakeLists.txt  lrp_executed_rt.cpp
runtimes/loopdepth/: CMakeLists.txt  lrp_loopdepth_rt.cpp
runtimes/scc_timing/: CMakeLists.txt  lrp_scc_timing_rt.cpp
runtimes/timing/: CMakeLists.txt  lrp_timing_rt.cpp
share/cmake/: config.cmake.in
tests/: CMakeLists.txt  function-identity.ll  lit.cfg.in
unittests/: CMakeLists.txt  TestLoopRuntimeProfiler.cpp
utils/scripts/: build.sh  build_with_dep.sh  exports_host1.sh  exports_host2.sh  run_unit_tests.sh.in  sccs_to_loops.awk
utils/scripts/run/: run-lrp-full.sh.in  run-lrp-with-body.sh.in  run-lrp-with-header.sh.in  run-lrp-with-latch.sh.in  run-lrp.sh.in
